[gd_scene load_steps=6 format=3 uid="uid://cx54gmymjr10i"]

[ext_resource type="Script" uid="uid://qkkgw8jqlml2" path="res://Scripts/UI/Inventory/crafting_menu.gd" id="1_4njxr"]
[ext_resource type="Theme" uid="uid://5uq80ele5x1b" path="res://Assets/main_theme.tres" id="1_fyp3v"]
[ext_resource type="Texture2D" uid="uid://bm2kgfprpt5cr" path="res://Assets/Textures/inventory/Crafting/CraftingUIBackground.png" id="1_ht6rx"]
[ext_resource type="PackedScene" uid="uid://daxxibw6axoih" path="res://Scenes/UI/Inventory/crafting_slot.tscn" id="2_hs25i"]
[ext_resource type="PackedScene" uid="uid://e2riunx43o7p" path="res://Scenes/UI/Inventory/crafting_tool_slot.tscn" id="4_2fa18"]

[node name="CraftingMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fyp3v")
script = ExtResource("1_4njxr")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(576, 319)
scale = Vector2(6, 6)
texture = ExtResource("1_ht6rx")

[node name="CraftingSlot1" parent="." instance=ExtResource("2_hs25i")]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_left = 228.0
offset_top = 259.0
offset_right = 244.0
offset_bottom = 275.0
scale = Vector2(1.5, 1.5)
metadata/_edit_use_anchors_ = true

[node name="CraftingSlot2" parent="." instance=ExtResource("2_hs25i")]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_left = 420.0
offset_top = 259.0
offset_right = 436.0
offset_bottom = 275.0
scale = Vector2(1.5, 1.5)
metadata/_edit_use_anchors_ = true

[node name="Result" parent="." instance=ExtResource("2_hs25i")]
custom_minimum_size = Vector2(75, 75)
layout_mode = 0
offset_left = 612.0
offset_top = 259.0
offset_right = 628.0
offset_bottom = 275.0
scale = Vector2(1.5, 1.5)
metadata/_edit_use_anchors_ = true

[node name="Recipes" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 750.0
offset_top = 128.0
offset_right = 996.0
offset_bottom = 511.0
scale = Vector2(0.862, 0.862)

[node name="VBoxContainer" type="VBoxContainer" parent="Recipes"]
layout_mode = 2
theme_override_constants/separation = 62

[node name="Craft" type="Button" parent="."]
layout_mode = 0
offset_left = 386.0
offset_top = 418.0
offset_right = 562.0
offset_bottom = 471.0
theme_override_font_sizes/font_size = 32
text = "Craft"

[node name="Tools" type="HBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 396.0
offset_top = 162.0
offset_right = 498.0
offset_bottom = 170.0
theme_override_constants/separation = 51

[node name="CraftingToolSlot" parent="Tools" instance=ExtResource("4_2fa18")]
layout_mode = 2
tool = 1

[node name="CraftingToolSlot2" parent="Tools" instance=ExtResource("4_2fa18")]
layout_mode = 2
tool = 2

[node name="CraftingToolSlot3" parent="Tools" instance=ExtResource("4_2fa18")]
layout_mode = 2
tool = 3

[connection signal="pressed" from="Craft" to="." method="_on_craft_pressed"]
